myteo/test/parser/empty_file.exp
ERROR: test/parser/empty_file.myte:1:0 File must start with a module declaration. Found "<EOF>" but expected "module"
 1 | 
   | ^